# gameboy-pipeline

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  dashboard.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat
.github/workflows/: ci.yml  elt_pipeline.yml
docs/: 01_Architectures.md  01_Project.md  02_Tech_Stacks.md  03_Learning_Log.md  04_Performance.md  05_Data_Model.md  06_Refactoring.md  07_Async_Parallel_Collection.md  07_Reflection.md
docs/refactoring/: baseline.md
docs/refactoring/benchmarks/data/: 2025-11-26_baseline.json  2025-11-28_phase1.json  extract_concurrent_20251203_172801.json  extract_sequential_20251201_164059.json  extract_sequential_20251203_174758.json
docs/refactoring/benchmarks/reports/: 2025-11-26_baseline.md  2025-11-28_compare_baseline_vs_phase1.md  2025-11-28_phase1.md
docs/refactoring/progress/: phase1.md
scripts/: benchmark_extract.py  run_benchmark_extract.py  run_benchmarks.py  run_pipeline.py  visualize_benchmark.py
src/: __init__.py  config.py
src/pipeline/: auth.py  batch_processor.py  constants.py  extractors.py  interfaces.py  loaders.py  manifest.py  orchestrator.py  rate_limiter.py  registry.py  s3_ops.py  state.py  utils.py
tests/: conftest.py  test_config.py
tests/pipeline/: test_auth.py  test_batch_processor.py  test_extractor.py  test_extractor_concurrent.py  test_extractor_concurrent_it.py  test_extractor_game_modes.py  test_extractor_genres.py  test_extractor_it.py  test_extractor_platforms.py  test_extractor_platforms_it.py  test_extractor_player_perspectives.py  test_extractor_popscore.py  test_extractor_popscore_it.py  test_extractor_popularity_types.py  test_extractor_themes.py  test_loader.py  test_loader_it.py  test_manifest.py  test_orchestrator.py  test_pipeline_e2e.py  test_popscore_idempotency.py  test_popscore_pipeline_it.py  test_rate_limiter.py  test_s3_ops.py  test_state.py  test_utils.py
tests/test_data/: igdb_games_mock.json
transform/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
transform/macros/: get_dimension_path.sql  get_latest_partition.sql  get_timeseries_path.sql
transform/models/marts/: dim_games.sql  fct_game_popularity.sql  schema.yml
transform/models/marts/marketing/: mart_controversial_games.sql  mart_hidden_gems.sql  mart_recent_games.sql  mart_rising_stars.sql  mart_theme_trends.sql  mart_top_hyped.sql  mart_top_rated.sql  mart_trending_now.sql
transform/models/staging/: schema.yml  stg_game_genre_bridge.sql  stg_game_mode_bridge.sql  stg_game_modes.sql  stg_game_perspective_bridge.sql  stg_game_platform_bridge.sql  stg_game_theme_bridge.sql  stg_games.sql  stg_genres.sql  stg_platforms.sql  stg_player_perspectives.sql  stg_popscore.sql  stg_popularity_types.sql  stg_themes.sql
transform/models/staging/bridge/: stg_game_genre_bridge.sql  stg_game_mode_bridge.sql  stg_game_perspective_bridge.sql  stg_game_platform_bridge.sql  stg_game_theme_bridge.sql
transform/seeds/: games_sample.jsonl  igdb_game_modes_mock.jsonl  igdb_games_mock.jsonl  igdb_genres_mock.jsonl  igdb_platforms_mock.jsonl  igdb_player_perspectives_mock.jsonl  igdb_themes_mock.jsonl
