[project]
name = "gameboy-pipeline"
version = "0.1.0"
description = "IGDB data pipeline for Game Boy games"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "aioboto3>=15.5.0",
    "dbt-duckdb>=1.10.0",
    "streamlit>=1.51.0",
    "duckdb>=1.4.1",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "plotly>=6.4.0",
    "radon>=6.0.1",
    "pygount>=3.1.0",
    "pytest-benchmark>=5.2.3",
    "aiolimiter>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
]

[project.scripts]
gameboy-pipeline = "gameboy_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["gameboy_pipeline"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]
markers = [
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

# Ignore missing type stubs for third-party libraries
[[tool.mypy.overrides]]
module = ["botocore.*", "aioboto3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
